--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,5 @@
 *.vv linguist-language=V text=auto eol=lf
 *.vsh linguist-language=V text=auto eol=lf
 **/v.mod linguist-language=V text=auto eol=lf
+
+exts/* linguist-vendored=false
