--- a/.gitattributes
+++ b/.gitattributes
@@ -6,4 +6,4 @@
 *.vsh linguist-language=V text=auto eol=lf
 **/v.mod linguist-language=V text=auto eol=lf
 
-exts/directx/*.h linguist-vendored=false
+exts/** linguist-vendored
